# PintaService

./: .gitignore  .prettierignore  LICENSE  README.md  tsconfig.json
admin/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.yaml  dev.py  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
admin/src/config/: config.py  env.py
admin/src/core/: bcrypt.py  config.py  cors.py  csrf.py  db.py  enums.py  google.py  jwt.py  permissions.py  seed.py  seed_dev.py  test_data.py
admin/src/core/models/: all_models.py  auth.py  base.py  institution.py  institution_service.py  institution_user.py  pre_regis_user.py  search.py  service.py  service_requests.py  site.py  user.py  user_institution.py  util.py
admin/src/services/: auth.py  base.py  database.py  institution.py  mail.py  request.py  service.py  site.py  user.py
admin/src/templates/: layout.html  register.html
admin/src/utils/: funcs.py  status.py
admin/src/web/: __init__.py  app.py  config.py
admin/src/web/controllers/: __init__.py  _errors.py  _helpers.py  admin.py  index.py  institution.py  request.py  root.py  service.py  user.py
admin/src/web/controllers/api/: __init__.py  _api.py  _base.py  base.py  root.py
admin/src/web/forms/: api.py  auth.py  institution.py  request.py  service.py  site.py  user.py
admin/src/web/pages/: __init__.py  admin.py  root.py
admin/src/web/templates/: account_disabled.html  base_layout.html  confirmation.html  contact.html  error.html  home.html  index.html  info_register.html  layout.html  login.html  maintenance.html  pre_register.html  profile.html  register.html  search_user.html  user_config.html
admin/src/web/templates/_errors/: 404.html  451.html  500.html  default.html
admin/src/web/templates/_frags/: flash_message.html
admin/src/web/templates/_layouts/: app.html  auth.html  base.html
admin/src/web/templates/_macros/: button.html  form.html  inst_dropdown.html  link_button.html  pagination.html  table.html
admin/src/web/templates/admin/: create_institution.html  create_service.html  create_user.html  edit_service.html  edit_user.html  index.html  institutions.html  services.html  site_config.html  users.html
admin/src/web/templates/institution/: setting.html
admin/src/web/templates/institutions/: index.html
admin/src/web/templates/requests/: index.html  notes.html  (+1 more)
admin/static/: contact.css  error.css  layout.css  styles.css  tailwind_min.css  tailwindcss_min.css
admin/static/js/: confirm_delete.js  layout.js  user_setting.js
admin/tests/: test_index.py
(+105 files in other folders)
