# Based on https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "web"

version = "0.3.0"

description = "Private application for managing the public website for the services of https://cidepint.ing.unlp.edu.ar/"

readme = "README.md"

requires-python = ">=3.8"

license = { file = "../LICENSE" }

authors = [
  { name = "Fabian Martinez" },
  { name = "Iñaki" },
  { name = "Josue" },
  { name = "Luciano Lopez" },
]

[project.scripts]
env-update = "src.core.config:env_update"

[tool.flask-livetw]
static_folder = "../static"
templates_folder = "web/templates"

[tool.isort]
profile = "black"
line_length = 79

[tool.pyright]
reportUnusedFunction = false
